--- a/source/sass/block/contacts.scss
+++ b/source/sass/block/contacts.scss
@@ -52,6 +52,12 @@
   }
 }
 
+@media (max-width: 767px) {
+  .contacts-page {
+    margin-top: 25px;
+  }
+}
+
 @media (min-width: $tablet) {
   .contacts__accordion-body {
     display: flex;
@@ -59,7 +65,7 @@
 
   .contacts__list {
     margin-bottom: 0;
-    max-width: 165px;
+    max-width: 180px;
   }
 
   .contacts__social {
