--- a/source/sass/block/curse-gallery.scss
+++ b/source/sass/block/curse-gallery.scss
@@ -1,10 +1,14 @@
 .curse-gallery {
   position: relative;
   padding: 30px;
+  margin-top: 0;
 }
 
 .curse-gallery__item img {
+  width: 100%;
+  height: 200px;
   margin: 0 auto;
+  object-fit: cover;
 }
 
 .curse-gallery__arrow {
@@ -37,9 +41,20 @@
   right: 0;
 }
 
+.curse-gallery h2 {
+  margin-bottom: 30px;
+}
+
 @media (min-width: $tablet) {
   .curse-gallery__item {
     padding-right: 10px;
     padding-left: 10px;
+  }
+}
+
+@media (min-width: $tablet-large) {
+  .curse-gallery {
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
 }
