--- a/source/sass/block/info-site.scss
+++ b/source/sass/block/info-site.scss
@@ -46,6 +46,12 @@
   margin-bottom: 20px;
 }
 
+@media (max-width: 767px) {
+  .info-site {
+    margin-top: 25px;
+  }
+}
+
 @media (max-width: 1209px) {
   .info-site__menu {
     margin: 0 -20px 31px -20px;
