--- a/source/sass/block/reviews.scss
+++ b/source/sass/block/reviews.scss
@@ -2,6 +2,19 @@
   margin-top: 15px;
 }
 
+.reviews__img {
+  width: 55px;
+  height: 50px;
+}
+
+.reviews__img img {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
 .reviews__info {
   display: flex;
   align-items: center;
@@ -50,14 +63,13 @@
 }
 
 .reviews__write-reviews {
-  // margin-left: auto;
   padding-left: 20px;
   padding-right: 20px;
   cursor: pointer;
 }
 
 .reviews__list {
-  margin: 0;
+  margin: 30px 0 0 0;
   padding-left: 0;
   list-style: none;
 }
@@ -497,8 +509,28 @@
     flex-wrap: nowrap;
     margin-bottom: 26px;
   }
+
   .reviews__write-reviews {
     margin-left: auto;
+  }
+
+  .reviews {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+
+  .reviews__new-write {
+    width: 100%;
+  }
+
+  .reviews__info {
+    padding-right: 30px;
+    width: calc(100% - 165px);
+  }
+
+  .reviews__list {
+    width: 100%;
   }
 }
 
