--- a/source/sass/block/teachers.scss
+++ b/source/sass/block/teachers.scss
@@ -17,8 +17,17 @@
   position: absolute;
   left: 20px;
   top: 20px;
+  width: 100%;
+  height: 100%;
   max-width: 47px;
   min-height: 47px;
+}
+
+.teachers__img img {
+  width: 47px;
+  height: 47px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .teachers__name {
