--- a/source/sass/block/underline-select.scss
+++ b/source/sass/block/underline-select.scss
@@ -2,18 +2,48 @@
   position: relative;
   width: 100%;
   height: 41px;
-  padding: 0;
+  padding: 0 0 3px 0;
   font-family: inherit;
   font-size: 16px;
   text-align: left;
   background-color: transparent;
   border: none;
-  border-bottom: 3px solid $gray-color;
 
   &:focus {
     outline: none;
-    border-color: $violet-dark-color;
   }
+
+  &::after {
+    content: " ";
+    position: absolute;
+    bottom: 0;
+    height: 3px;
+    width: 100%;
+    z-index: 1;
+    background-image: linear-gradient(to right, #abcdff 33.33%, $gray-color 33.33%);
+  }
+
+  &::before {
+    content: " ";
+    position: absolute;
+    bottom: 0;
+    height: 3px;
+    width: 100%;
+    background-color: $gray-color;
+  }
+}
+
+.underline-select--cancel .underline-select__toggle::after {
+  background-image: none;
+  background-color: $gray-color;
+}
+
+.underline-select--processing .underline-select__toggle::after {
+  background-image: linear-gradient(to right, #abcdff 33.3%, $yellow-color 33.3%, $yellow-color 66.6%, $gray-color 66.6%);
+}
+
+.underline-select--completed .underline-select__toggle::after {
+  background-image: linear-gradient(to right, #abcdff 33.3%, $yellow-color 33.3%, $yellow-color 66.6%, $green-color 66.6%);
 }
 
 .underline-select__content {
@@ -21,7 +51,8 @@
   position: absolute;
   left: 0;
   top: 100%;
-  width: 280px;
+  margin-top: 10px;
+  width: 100%;
   background-color: $white-color;
   box-shadow: 0 3px 6px rgba($black-clear-color, 0.16);
   z-index: 3;
@@ -70,4 +101,19 @@
 
 .underline-select--open svg {
   transform: translateY(-50%) rotate(180deg);
+}
+
+@media (min-width: $laptop) {
+  .underline-select__option {
+    &:hover {
+      font-weight: 500;
+      background-color: $gray-standard-color;
+    }
+
+    &:focus {
+      outline: none;
+      font-weight: 500;
+      background-color: $gray-standard-color;
+    }
+  }
 }
