--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -51,3 +51,14 @@ input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration { display: none; }
+
+.overflow-popup {
+  overflow: hidden;
+  padding-right: 17px;
+}
+
+@media (max-width:1199px) {
+  .overflow-popup {
+    padding-right: 0;
+  }
+}
